# wow-analytics-api

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  mypy.ini  pyproject.toml  ruff.toml  vercel.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: aggregate.yml  ci.yml  container.yml  discovery.yml  load-tests.yml  snapshot.yml
api/: __init__.py  config.py  deps.py  main.py
api/repositories/: __init__.py
api/routers/: __init__.py  characters.py  classes.py  compare.py  health.py  realms.py
api/schemas/: __init__.py
api/services/: __init__.py
api/tests/: test_health.py
ingestion/: __init__.py  config.py  logging.py
ingestion/clients/: __init__.py  base.py  blizzard.py  raiderio.py
ingestion/collectors/: __init__.py  mythic.py  profile.py  pvp.py
ingestion/domain/: __init__.py  models.py
ingestion/pipelines/: __init__.py  run_aggregate.py  run_discovery.py  run_snapshot.py
ingestion/ports/: __init__.py  blizzard.py  characters.py  discovery_queue.py  ingestion_runs.py  mythic_runs.py  raiderio.py  raw_store.py  snapshots.py
ingestion/repositories/: __init__.py  characters.py  mythic_runs.py  queue.py  raw_store.py  snapshots.py
ingestion/tests/unit/: test_domain_models.py  test_port_contracts.py
ingestion/tests/unit/fakes/: __init__.py  blizzard.py  characters.py  discovery_queue.py  ingestion_runs.py  (+4 more)
k6/: thresholds.js
k6/scenarios/: load.js  smoke.js  stress.js
scripts/: generate-api-types.sh  install-hooks.sh  new-migration.sh
supabase/: config.toml  seed.sql
tests/contract/: test_openapi.py
tests/postman/: wow_analytics.postman_collection.json  wow_analytics_ci.postman_environment.json
