[project]
name = "wow-analytics"
version = "0.1.0"
description = "Ingestão, modelagem e análise de dados de World of Warcraft."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "italochagas" }]

# Core deps usadas por ingestão e api. Grupos opcionais abaixo separam
# o que cada superfície precisa para manter os deploys leves.
dependencies = [
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
ingestion = [
    "asyncpg>=0.30",
    "aioboto3>=13.1",
    "typer>=0.12",
    "sentry-sdk>=2.14",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.30",
    "sentry-sdk[fastapi]>=2.14",
]

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "types-python-dateutil>=2.9",
    "pre-commit>=3.8",
    "httpx>=0.27",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "api"]

# -------- pytest --------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["ingestion/tests", "api/tests"]
asyncio_mode = "auto"
markers = [
    "integration: requer supabase local (docker) e/ou minio",
]

[tool.coverage.run]
source = ["ingestion", "api"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
